fixed viusal half cut off

--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -104,7 +104,19 @@
     height: 20%;
 }
 
+#floor {
+    position : absolute;
+    width : 100%;
+    height : 100%;
+    background-color : rgb(128,128,128);
+}
 
+#ceiling {
+    position : absolute;
+    width : 100%;
+    height : 50%;
+    background-color : rgb(96,96,96);
+}
 
 #screen {
     position: relative;
